# example-crossformer-sdk

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: main.yml
data/: example.csv
notebooks/: demo.ipynb  test_sdk.ipynb
scripts/: badges.sh  example.py  format.sh  test.sh
scripts/badges/: complexity.py  version.py
src/example_crossformer_sdk/: main.py  version.py
src/python_template/: __init__.py  main.py  version.py
src/test_binary_sdk/: __init__.py  main.py
tests/: conftest.py  test_all.py  test_notebooks.py
