[project]
name = "python-template"
version = "0.0.1"
description = "Add your description here."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typeguard>=4.4.4"]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "genbadge[coverage]>=1.1.3",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "radon>=6.0.1",
    "ruff>=0.12.11",
    "vulture>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
