[project]
name = "test-binary-sdk"
version = "0.0.1"
description = "Add your description here."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cineon-format>=3.0.7",
    "ipykernel>=7.3.0",
    "numpy>=2.4.0",
    "pip>=26.1.2",
    "typeguard>=4.5.2",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "genbadge[coverage]>=1.1.3",
    "ipykernel>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pytest>=8.4.1",
    "radon>=6.0.1",
    "ruff>=0.12.11",
    "vulture>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.uv]
package = true
