[project]
name = "example-crossformer-sdk"
version = "0.0.1"
description = "A repository for testing the binary sdk package for model inference."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cineon-format>=3.0.7",
    "cineon-sdk",
    "ipykernel>=7.3.0",
    "numpy>=2.4.0",
    "pip>=26.1.2",
    "typeguard>=4.5.2",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "genbadge[coverage]>=1.1.3",
    "ipykernel>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pytest>=8.4.1",
    "radon>=6.0.1",
    "ruff>=0.12.11",
    "vulture>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.uv]
package = true

[tool.uv.sources]
cineon-sdk = { path = "binary/cineon_sdk-1.0.0-cp312-abi3-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl" }
